--- a/src/app/Component/user-orders/user-orders.component.html
+++ b/src/app/Component/user-orders/user-orders.component.html
@@ -1,4 +1,6 @@
-<!-- <div class=" rounded bg-light container gap-3 p-3 mt-3" *ngIf="!isLoading">
+
+    <div *ngIf="!isLoading">
+<div class=" rounded bg-light container gap-3 p-3 mt-3" >
     <div class="row ">
         <div class="col text-center fs-1 fw-bold m-2">
             Your Orders
@@ -10,14 +12,13 @@
             <div *ngFor="let item of orders[i].cartItems; let j = index">
                 <div class="row">
                     <div class=" col m-4 p-3 ">
-                        <img class="w-75" [src]="getImageUrl(orders[0].cartItems[0].product.image)">
+                        <img class="w-75" [src]="getImageUrl(orders[i].cartItems[j].product.image)">
                     </div>
                     <div class="col-12 col-md-8   m-4 p-3">
-                        <div class="fw-bold col-12">{{item}}</div>
-                        <div><span class="fw-bold">QTY :</span> {{order[i].item.quantity}}</div>
-                        <div><span class="fw-bold">Price:</span> $ {{order[i].item.price}}</div>
+                        <div class="fw-bold col-12">{{item.product.title}}</div>
+                        <div><span class="fw-bold">QTY :</span> {{item.quantity}}</div>
+                        <div><span class="fw-bold">Price:</span> $ {{item.price}}</div>
                     </div>
-                    {{}}
                 </div> 
             </div>     
         </div>
@@ -25,11 +26,11 @@
             <div class="fw-bold col-12 text-center p-3">Details</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 ">date<span class="text-green">{{order.orderAt | date:'medium'}}</span></div>
             <div class="fw-bold col-12 p-2">address</div>
-            <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>city :</span>{{order.address.city}}</div>
+            <!-- <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>city :</span>{{order.address.city}}</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>postalCode :</span>{{order.address.postalCode}}</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>street :</span>{{order.address.street}}</div>
             <div class="fw-bold col-12 bg-white p-3 rounded mt-1 "><span>Total Order Price</span>  : $ {{order.totalOrderPrice}}</div>     
-         
+          -->
         </div>
     </div>
 
@@ -39,7 +40,7 @@
 
     
 </div>
-
+</div>
 <div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
     <app-loading-spinner></app-loading-spinner>
-    </div> -->
+    </div>
