edit input data in user profile

--- a/src/app/Component/user-profile/user-profile.component.html
+++ b/src/app/Component/user-profile/user-profile.component.html
@@ -1,25 +1,34 @@
 <div class="container rounded bg-white mt-5 mb-5">
-    <div class="row">
-        <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" [src]="getImageUrl(userProfile.image)"><span class="font-weight-bold">ddddd</span><span class="text-black-50">dddddd</span><span> </span></div>
-        </div>
-        <div class="col-md-5 border-right">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="text-right">Profile Settings</h4>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-md-12"><label class="labels">First Name</label><input type="text" class="form-control" placeholder="first Name" [value]="userProfile.fname" disabled ></div>
-                    <div class="col-md-12"><label class="labels">Last Name</label><input type="text" class="form-control" formControlName="lname" placeholder="Last Name"disabled [value]="userProfile.lname"></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="phone number"  [value]="userProfile.Email" disabled ></div>
-                    <div class="col-md-12"><label class="labels">City</label><input type="text" class="form-control" placeholder="City" [value]="userProfile.City"  disabled ></div>
-                    <div class="col-md-12"><label class="labels">postalCode</label><input type="text" class="form-control" placeholder="postalCode"  [value]="userProfile.postalCode" disabled ></div>
-                    <div class="col-md-12"><label class="labels">street</label><input type="text" class="form-control" placeholder="street" [value]="userProfile.street" disabled ></div>  
-                </div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button" routerLink="/updateProfile">update Profile</button></div>
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-md-3 border-right">
+      <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
+          width="150px" [src]="getImageUrl(userProfile.image)"><span class="font-weight-bold">{{userProfile.fname}}
+          {{userProfile.lname}}</span><span class="text-black-50">dddddd</span><span> </span></div>
     </div>
+    <div class="col-md-5 border-right">
+      <div class="p-3 py-5">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <h4 class="text-right">Profile Settings</h4>
+        </div>
+        <div class="row mt-2">
+          <div class="col-md-12"><label class="labels">First Name</label><input type="text" class="form-control"
+              placeholder="first Name" [value]="userProfile.fname" disabled></div>
+          <div class="col-md-12"><label class="labels">Last Name</label><input type="text" class="form-control"
+              formControlName="lname" placeholder="Last Name" disabled [value]="userProfile.lname"></div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control"
+              placeholder="phone number" [value]="userProfile.email" disabled></div>
+          <div class="col-md-12"><label class="labels">City</label><input type="text" class="form-control"
+              placeholder="City" [value]="userProfile.City" disabled></div>
+          <div class="col-md-12"><label class="labels">postalCode</label><input type="text" class="form-control"
+              placeholder="postalCode" [value]="userProfile.postalCode" disabled></div>
+          <div class="col-md-12"><label class="labels">street</label><input type="text" class="form-control"
+              placeholder="street" [value]="userProfile.street" disabled></div>
+        </div>
+        <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button"
+            routerLink="/updateProfile">update Profile</button></div>
+      </div>
+    </div>
+  </div>
 </div>
