--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <h3 class="text-center text-main bg-success text-light rounded-2 p-2">All Categories</h3>
+    <h3 class="text-center text-main bg-success text-light rounded-2 p-2 fw-bold fs-4">All Categories</h3>
     <!-- categories slider -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -34,7 +34,7 @@
     <!-- products -->
     <div class="row mt-5">
       <div class="d-flex justify-content-between text-center text-main  bg-success text-light rounded-2 p-2">
-        <h3 class="mt-2 ms-3 ">Products</h3>
+        <h3 class="mt-2 ms-3 fw-bold fs-4">Products</h3>
         <div class="d-flex text-center">
           <!-- search -->
           <app-search (searchTextChanged)="onSearchTextChanged($event)"></app-search>
