--- a/src/app/Component/user-profile/user-profile.component.html
+++ b/src/app/Component/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
         <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" [src]="getImageUrl(userProfile.image)"><span class="font-weight-bold">ddddd</span><span class="text-black-50">dddddd</span><span> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" [src]="getImageUrl(userProfile.image)"><span class="font-weight-bold mt-2">{{userProfile.fname}} {{userProfile.lname}}</span><span class="text-black-50"></span><span> </span></div>
         </div>
         <div class="col-md-5 border-right">
             <div class="p-3 py-5">
@@ -13,10 +13,10 @@
                     <div class="col-md-12"><label class="labels">Last Name</label><input type="text" class="form-control" formControlName="lname" placeholder="Last Name"disabled [value]="userProfile.lname"></div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="phone number"  [value]="userProfile.Email" disabled ></div>
-                    <div class="col-md-12"><label class="labels">City</label><input type="text" class="form-control" placeholder="City" [value]="userProfile.City"  disabled ></div>
-                    <div class="col-md-12"><label class="labels">postalCode</label><input type="text" class="form-control" placeholder="postalCode"  [value]="userProfile.postalCode" disabled ></div>
-                    <div class="col-md-12"><label class="labels">street</label><input type="text" class="form-control" placeholder="street" [value]="userProfile.street" disabled ></div>  
+                    <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="phone number"  [value]="userProfile.email" disabled ></div>
+                    <div class="col-md-12"><label class="labels">City</label><input type="text" class="form-control" placeholder="City" [value]="userProfile.address.city"  disabled ></div>
+                    <div class="col-md-12"><label class="labels">postalCode</label><input type="text" class="form-control" placeholder="postalCode"  [value]="userProfile.address.postalCode" disabled ></div>
+                    <div class="col-md-12"><label class="labels">street</label><input type="text" class="form-control" placeholder="street" [value]="userProfile.address.street" disabled ></div>  
                 </div>
                 <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button" routerLink="/updateProfile">update Profile</button></div>
             </div>
