--- a/src/app/Component/admin-dashboard/product/product.component.css
+++ b/src/app/Component/admin-dashboard/product/product.component.css
@@ -10,7 +10,10 @@
 .mb-3 {
   margin-bottom: 15px;
 }
-
+.product-image {
+  height: 300px !important;
+  object-fit: contain !important ;
+}
 /* Style for the button */
 .btn-primary {
   color: #fff;
