--- a/src/app/Component/product-details/product-details.component.html
+++ b/src/app/Component/product-details/product-details.component.html
@@ -13,7 +13,7 @@
         <div class="row">
           <h2 class="title">{{ product.title }}</h2>
           <div class="col-sm-6">
-            <p class="Category">{{ categoryName }}</p>
+            <p class="Category fw-bold">{{ categoryName }}</p>
           </div>
           <div class="col-sm-6">
             <p class="Price text-primary fw-bold fs-5">Price : {{ product.price |currency:'EGP':'symbol'}}</p>
