--- a/src/app/Component/about-us/about-us.component.html
+++ b/src/app/Component/about-us/about-us.component.html
@@ -4,8 +4,8 @@
 
 <div id="aboutUs" [dir]="'dir' | translate">
   <div class="container-fluid c1">
-    <h2>{{'About.About Us' | translate}}</h2>
-    <p>{{'About.About-txt' | translate}}</p>
+    <h2 class="fw-bold fs-1 text-uppercase">{{'About.About Us' | translate}}</h2>
+    <p class="fs-6 ">{{'About.About-txt' | translate}}</p>
   </div>
 
   <div class="container c2 mt-1">
