--- a/src/app/Component/admin-dashboard/product/product.component.css
+++ b/src/app/Component/admin-dashboard/product/product.component.css
@@ -10,10 +10,7 @@
 .mb-3 {
   margin-bottom: 15px;
 }
-.product-image {
-  height: 300px !important;
-  object-fit: contain !important ;
-}
+
 /* Style for the button */
 .btn-primary {
   color: #fff;
@@ -36,15 +33,17 @@
 }
 .image-container {
   width: 70px;
-  height: 70px;
+  height: 65px;
   border-radius: 50%;
   overflow: hidden;
 }
 
 .image-container img {
   width: 100%;
-  height: 100%;
+  height: 90%;
   display: block;
+  object-fit: contain;
+
 }
 
 .action-buttons {
