update admin dashboard

--- a/src/app/Component/Admin/admin-users/admin-users.component.html
+++ b/src/app/Component/Admin/admin-users/admin-users.component.html
@@ -27,7 +27,7 @@
                   </div>
                 </td>
                 <td>{{ user.fname }}</td>
-                <td>{{ user.email }}</td>
+                <td><b>{{ user.email }}</b></td>
                 <td>
                   <div class="action-buttons">
                     <button class="btn btn-danger px-3" (click)="OpenDialog(user._id)" title="Remove Customer">
