--- a/src/app/Component/admin-dashboard/Orders/content.component.css
+++ b/src/app/Component/admin-dashboard/Orders/content.component.css
@@ -21,23 +21,36 @@
   border-radius: 50px;
   transition: all 0.3s ease;
 }
+.action-buttons,.image-container
+{
+  justify-content:center ;
+
+}
 .btn-primary:hover {
   color: #fff;
   background-color: #146c43;
   border-color: #146c43;
 }
 .image-container {
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 65px;
   border-radius: 50%;
   overflow: hidden;
 }
 
 .image-container img {
   width: 100%;
-  height: auto;
+  height: 90%;
   display: block;
+  object-fit: contain;
+
 }
+
+.action-buttons {
+  display: flex;
+  gap: 8px;
+}
+
 /* Adjustments for smaller screens */
 @media screen and (max-width: 768px) {
   .image-container {
@@ -117,7 +130,7 @@
     font-weight: 500;
 }
 .panel .panel-body{ padding: 0; }
-.panel .panel-body .table thead tr th td.list{
+.panel .panel-body .table thead tr th{
     color: #fff;
     background-color: rgba(255, 255, 255, 0.2);
     font-size: 16px;
@@ -125,11 +138,6 @@
     text-transform: uppercase;
     padding: 12px;
     border: none;
-}
-.action-buttons
-{
-  justify-content:center ;
-
 }
 tbody tr
 {
