--- a/src/app/Component/user-profile/user-profile.component.html
+++ b/src/app/Component/user-profile/user-profile.component.html
@@ -9,16 +9,16 @@
                     <h4 class="text-right">Profile Settings</h4>
                 </div>
                 <div class="row mt-2">
-                    <div class="col-md-12"><label class="labels">First Name</label><input type="text" class="form-control" placeholder="first Name" [value]="userProfile.fname" disabled ></div>
-                    <div class="col-md-12"><label class="labels">Last Name</label><input type="text" class="form-control" formControlName="lname" placeholder="Last Name"disabled [value]="userProfile.lname"></div>
+                    <div class="col-md-12"><label class="labels">First Name</label><input type="text" class="form-control" placeholder="first Name" [value]="userProfile?.fname??''" disabled ></div>
+                    <div class="col-md-12"><label class="labels">Last Name</label><input type="text" class="form-control"  placeholder="Last Name"disabled [value]="userProfile?.lname??''"></div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="phone number"  [value]="userProfile.email" disabled ></div>
-                    <div class="col-md-12"><label class="labels">City</label><input type="text" class="form-control" placeholder="City" [value]="userProfile.address.city"  disabled ></div>
-                    <div class="col-md-12"><label class="labels">postalCode</label><input type="text" class="form-control" placeholder="postalCode"  [value]="userProfile.address.postalCode" disabled ></div>
-                    <div class="col-md-12"><label class="labels">street</label><input type="text" class="form-control" placeholder="street" [value]="userProfile.address.street" disabled ></div>  
+                    <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="phone number"  [value]="userProfile?.email ?? ''" disabled ></div>
+                    <div class="col-md-12" ><label class="labels">City</label><input type="text" class="form-control"  placeholder="City" [value]="userProfile.address?.city ?? ''" disabled ></div>
+                    <div class="col-md-12"><label class="labels">postalCode</label><input type="text" class="form-control" placeholder="postalCode"  [value]="userProfile.address?.postalCode?? ''" disabled ></div>
+                    <div class="col-md-12"><label class="labels">street</label><input type="text" class="form-control" placeholder="street" [value]="userProfile.address?.street??''" disabled ></div>  
                 </div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button" routerLink="/updateProfile">update Profile</button></div>
+                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button"  routerLink="/updateProfile">update Profile</button></div>
             </div>
         </div>
     </div>
