added category icon

--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -45,11 +45,11 @@
           <select class="form-select ms-2 text-success" aria-label="Sort By" [(ngModel)]="sortBy" (change)="onSortChange(sortBy)" style="padding: 8px 12px; border-radius: 5px; border: 1px solid #ccc; background-color: #fff; color: #333; font-size: 14px; outline: none;">
             <option selected value="">{{ 'category.sort' | translate }}</option> 
             <option value="price" >
-              {{ 'category.price' | translate }}⬆️
+              {{ 'category.price' | translate }} &#x2B06;&#xFE0E;
              
             </option>
-            <option value="price-desc">{{ 'category.price-desc' | translate }} ⬇️</option>
-            <option value="category" >{{ 'category.category' | translate }}⬆️</option>
+            <option value="price-desc">{{ 'category.price-desc' | translate }} &#x2B07;&#xFE0E;</option>
+            <option value="category" >{{ 'category.category' | translate }} &#x2B06;&#xFE0E;</option>
           </select>
           
           <!-- end sort    -->
