fix order refresh bug

--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -51,7 +51,7 @@
                     <button class="btn btn-info" (click)="getOrder(item._id)" title="More info">
                       <i class="bi bi-info-circle-fill"></i>
                     </button>
-                    <button class="btn btn-danger" (click)="OpenDialog(item._id)" title="Cancel order">
+                    <button class="btn btn-danger" (click)="OpenDialog(item._id , i)" title="Cancel order">
                       <i class="bi bi-x-circle-fill"></i>
                     </button>
                   </div>
