--- a/src/app/Component/user-orders/user-orders.component.html
+++ b/src/app/Component/user-orders/user-orders.component.html
@@ -1,6 +1,6 @@
 
     <div *ngIf="!isLoading">
-<div class=" rounded bg-light container gap-3 p-3 mt-3" >
+<div class=" rounded bg-light container gap-3 p-3 mt-3">
     <div class="row ">
         <div class="col text-center fs-1 fw-bold m-2">
             Your Orders
@@ -40,6 +40,7 @@
 
     
 </div>
+<div *ngIf></div>
 </div>
 <div *ngIf="isLoading"  class="position-fixed top-50 start-50 translate-middle">
     <app-loading-spinner></app-loading-spinner>
