--- a/src/app/Component/admin-dashboard/Orders/content.component.html
+++ b/src/app/Component/admin-dashboard/Orders/content.component.html
@@ -19,7 +19,7 @@
               </tr>
             </thead>
             <tbody>
-              
+
               <tr *ngFor="let item of orderInfo ; let i= index">
                 <td><b>{{ item.user.email }}</b></td>
                 <td>{{ item.createdAt | date }}</td>
@@ -41,8 +41,8 @@
                     </mat-select>
                   </mat-form-field>
                 </td > -->
-                <td><button class="btn btn-info" (click)="getOrder(item._id)"> More info </button></td>
-                <td class="action-buttons"><button class="btn btn-danger" (click)="OpenDialog(item._id, i)">cancel</button></td>
+                <!-- <td><button class="btn btn-info" (click)="getOrder(item._id)"> More info </button></td>
+                <td class="action-buttons"><button class="btn btn-danger" (click)="OpenDialog(item._id, i)">cancel</button></td> -->
                 <!-- <td><button class="btn btn-info" (click)="getOrder(item._id)"> More info </button></td>
                 <td class="action-buttons"><button class="btn btn-danger" (click)="OpenDialog(item._id)">cancel</button></td> -->
                 <td>
