alert some update in the order view

--- a/src/app/Component/admin-dashboard/order-detail-dialog/order-detail-dialog.component.html
+++ b/src/app/Component/admin-dashboard/order-detail-dialog/order-detail-dialog.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="modal-header justify-content-end">
     <button type="button" class="btn-close" aria-label="Close" (click)="closeDialog()"></button>
   </div>
@@ -17,8 +17,7 @@
        </div>
         <div class="col-md-6 order_detail">
           <div class="row">
-            <!-- <h2 class="title">{{ data.title }}</h2> -->
-            <!-- <span class="price"> total Price: {{data.totalOrderPrice}}</span> -->
+         
             <div class="col-sm-6">
               <p class="Category"> staus : {{ data.status }}</p>
             </div>
@@ -46,4 +45,46 @@
   
   <br>
   
-  
+   -->
+
+
+   <div class="modal-header justify-content-end">
+    <button type="button" class="btn-close" aria-label="Close" (click)="closeDialog()"></button>
+</div>
+<br>
+<br>
+<div class="container mt-2">
+    <ng-container *ngIf="data">
+        <div class="row custom-row">
+            <div class="col-md-6 user_info">
+                <div class="d-flex flex-column align-items-center">
+                    <img class="card-img-top img-fluid" style="width: 200px;" [src]="getImageUrl(data.user.image)" alt="user image">
+                    <h2>{{data.user.fname}} {{data.user.lname}}</h2>
+                    <h4>{{data.user.email}}</h4>
+                </div>
+            </div>
+            <div class="col-md-6 order_detail">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="Category">Status: {{ data.status }}</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p class="Price">Price: {{ data.totalOrderPrice | currency:'EGP':'symbol' }}</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="description">
+                    <div class="description-controls">
+                        <p class="desc-title">Order Items:</p>
+                        <div class="card" style="width: 18rem;">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item" *ngFor="let p of data.cartItems"> title: {{ p.product.title }}  quantity: {{p.quantity}}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-container>
+</div>
+<br>
