--- a/src/app/Component/user-profile/user-profile.component.html
+++ b/src/app/Component/user-profile/user-profile.component.html
@@ -24,18 +24,21 @@
                         <label class="form-label">Email</label>
                         <input type="text" class="form-control" placeholder="Email" formControlName="email" >
                     </div>
-                    <div class="col-md-6 p-3">
-                        <label class="form-label">City</label>
-                        <input type="text" class="form-control" placeholder="City" formControlName="City" >
+                    <div formGroupName="address">
+                        <div class="col-md-6 p-3">
+                            <label class="form-label">City</label>
+                            <input type="text" class="form-control" placeholder="City" formControlName="city" >
+                        </div>
+                        <div class="col-md-6 p-3">
+                            <label class="form-label">Postal Code</label>
+                            <input type="text" class="form-control" placeholder="Postal Code" formControlName="postalCode" >
+                        </div>
+                        <div class="col-md-6 p-3">
+                            <label class="form-label">Street</label>
+                            <input type="text" class="form-control" placeholder="street" formControlName="street" >
+                        </div>
                     </div>
-                    <div class="col-md-6 p-3">
-                        <label class="form-label">Postal Code</label>
-                        <input type="text" class="form-control" placeholder="Postal Code" formControlName="postalCode" >
-                    </div>
-                    <div class="col-md-6 p-3">
-                        <label class="form-label">Street</label>
-                        <input type="text" class="form-control" placeholder="street" formControlName="street" >
-                    </div>
+                    
                 </div>
                 <div class="mt-5 text-center">
                     <button class="btn btn-success" type="button" routerLink="/updateProfile">Update Profile</button>
