--- a/src/app/Component/not-found/not-found.component.css
+++ b/src/app/Component/not-found/not-found.component.css
@@ -4,8 +4,11 @@
   background: #33cc99;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
-  /* height: calc(100vh - 50px); */
   overflow: hidden;
+  margin-top: -50px;
+  margin-left: -10px;
+  margin-right: -10px;
+  height: 533px;
 }
 
 .c {
@@ -13,7 +16,7 @@
   display: block;
   position: relative;
   width: 80%;
-  margin: 100px auto;
+  margin: 87px auto;
 }
 
 ._404 {
@@ -21,7 +24,7 @@
   position: relative;
   display: inline-block;
   z-index: 2;
-  height: 250px;
+  height: 235px;
   letter-spacing: 15px;
 }
 
@@ -103,7 +106,7 @@ hr:after {
   background: linear-gradient(top, #FFF 100%);
   border-radius: 100px;
   position: absolute;
-  margin: 120px auto 20px;
+  margin: 100px auto 20px;
   z-index: 9;
   transition: ease 1s;
 }
@@ -127,13 +130,13 @@ hr:after {
 .cloud:before {
   width: 180px;
   height: 180px;
-  top: -90px;
+  top: -80px;
   right: 50px;
   border-radius: 200px;
 }
 
 .x1 {
-  top: -50px;
+  top: -40px;
   left: 100px;
   transform: scale(0.3);
   opacity: 0.9;
@@ -141,7 +144,7 @@ hr:after {
 }
 
 .x1_5 {
-  top: -80px;
+  top: 15px;
   left: 250px;
   transform: scale(0.3);
   animation: moveclouds 17s linear infinite;
@@ -149,7 +152,7 @@ hr:after {
 
 .x2 {
   left: 250px;
-  top: 30px;
+  top: 40px;
   transform: scale(0.6);
   opacity: 0.6;
   animation: moveclouds 25s linear infinite;
@@ -157,7 +160,7 @@ hr:after {
 
 .x3 {
   left: 250px;
-  bottom: -70px;
+  bottom: 10px;
   -webkit-transform: scale(0.6);
   -moz-transform: scale(0.6);
   transform: scale(0.6);
@@ -167,7 +170,7 @@ hr:after {
 
 .x4 {
   left: 470px;
-  /* botttom: 20px; */
+  bottom: 20px;
   transform: scale(0.75);
   opacity: 0.75;
   animation: moveclouds 18s linear infinite;
@@ -175,7 +178,7 @@ hr:after {
 
 .x5 {
   left: 200px;
-  top: 300px;
+  top: 200px;
   transform: scale(0.5);
   opacity: 0.8;
   animation: moveclouds 20s linear infinite;
